0.12

[+] IPv6 is enabled by default
[+] links support is updated and enabled by default
[+] server's exports list is enabled by default

[*] remotefs may be built without UGO support
[*] fixed segfault if certificate file(s) isn't exist
[*] fixed packages default build arch for x86_64
[*] flush support is back
[*] new rfscert.sh

rfsd:

[*] fixed segfault if no users/ips are specified in export line
[*] pid file correctly deleted if rfsd can't start
[*] more friendly error messages on exports parsing
[*] fixed memory leak in readdir()

rfs:

[*] prefetch is disabled by default if SSL isn't used
[*] removed -ordwr_cache option
[*] fixed 

[+] transform_symlinks option

0.11

[+] links support in SVN
[+] support of files bigger than 2GB
[+] SSL support in SVN
[+] suggestions for client and server
[+] server's exports listing in SVN
[+] POSIX ACL support in SVN
[*] improved reconnect support

[*] added dependency against libc to packages

rfsd:
[+] -e option for defining location of rfs-exports
[+] -s option for defining location of rfs-passwd

[*] read-ahead is replaced with sendfile
[*] no more dependency against libcrypt

rfs:
[+] FUSE API switched to 2.6 (but rfs is still copatible with FUSE 2.5)
[+] background prefetch and write

[*] fixed cache clearing after connection is lost and restored
[*] fixed memory leak in attributes cache

rfspasswd:
[+] -s option for defining location of rfs-passwd

0.10-3

[+] tarball package support

[*] fixed x86_64 compilation error

0.10-2

[*] fixed bug with attributes cache

0.10

[+] ipv6 support in SVN
[+] Solaris and FreeBSD support
[*] performance optimizations

rfsd:
[+] options to customize per export privileges (user=[username],group=[groupname])
[*] fixed exports parsing for lines without a terminating linebreak
[+] reload() support in init script
[+] pidfile path setting with -r option
[*] fixed bug with socket not being closed
[*] fixed bug with pid-file being inappropriately deleted